--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,21 +3,21 @@
 <p>
     REST API routes that can be opened in the browser:
     <ul>
-        <li><a href="product"><code>/product</code></a> List all products</li>
+        <li><a href="price"><code>/price</code></a> List all products</li>
         <li>
-            <a href="product?limit=3&skip=2"><code>/product?limit=3&skip=2</code></a> List only 3 products out of them all,
+            <a href="price?limit=3&skip=2"><code>/price?limit=3&skip=2</code></a> List only 3 products out of them all,
             and skip first 2 products
         </li>
         <li>
-            <a href="product/search/dark"><code>/product/search/{token}</code></a> List all products that contains {token}
+            <a href="price/search/dark"><code>/price/search/{token}</code></a> List all products that contains {token}
             (eg. "dark")
         </li>
         <li>
-            <a href="product/512_brewing_company-512_ipa">
-            <code>/product/{id}</code></a> Return info on one product, of id {id}
+            <a href="price/512_brewing_company-512_ipa">
+            <code>/price/{id}</code></a> Return info on one product, of id {id}
         </li>
         <li>
-            <a href="brewery/512_brewing_company"><code>/brewery/{id}</code></a> Prints
+            <a href="price/512_brewing_company"><code>/brewery/{id}</code></a> Prints
             details about a brewery of id {id} and the detailed list of all its products.
         </li>
     </ul>
